syntax = "proto3";

package profileRPC;
option go_package="./rpc";

message GetUniqueProfileOrCreateReq { 
  string UserId = 1; 
  string Name = 2;
  string ImageUrl = 3;
  string Email = 4;
}

message GetUniqueProfileOrCreateRes {
  string Id = 1;
  string UserId = 2;
  string Name = 3;
  string ImageUrl = 4;
  string Email = 5;
}

message PatchProfileReq {
  string Id = 1;
  string UserId = 2;
  string Name = 3;
  string ImageUrl = 4;
  string Email = 5;
}

message DeleteProfileReq {
  string Id = 1;
}

message Empty {}

service Rpc {
  rpc GetUniqueProfileOrCreate(GetUniqueProfileOrCreateReq)
      returns (GetUniqueProfileOrCreateRes);
  rpc PatchProfile(PatchProfileReq) returns (Empty);
  rpc DeleteProfile(DeleteProfileReq) returns (Empty);
}